--- a/index.html
+++ b/index.html
@@ -70,28 +70,14 @@
             font-size: 1.3rem;
         }
         .final-line {
-            font-size: 1.5rem;
             margin-top: 2.5rem;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 2px;
             position: relative;
             padding-top: 1rem;
-            padding-bottom: 1rem;
         }
         .final-line::before {
             content: '';
             position: absolute;
             top: 0;
-            left: 30%;
-            width: 40%;
-            height: 1px;
-            background: linear-gradient(90deg, transparent, #40E0D0, transparent);
-        }
-        .final-line::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
             left: 30%;
             width: 40%;
             height: 1px;
@@ -157,7 +143,7 @@
                 А кто не выдержит - те отключаются от Источника Реализационной Власти и Материализующей Силы, и по-ступенно сходят на нет, передавая своё достояние в виде энергии, информации и имущества назначенным им преемникам.
             </p>
             
-            <div class="final-line">ПУЛЬСА-ДЕ-НУРА</div>
+            <div class="final-line"></div>
         </div>
 
         <!-- Второй блок -->
