--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             
             <div class="payment-details">
                 <p style="margin-bottom: 1rem;">
-                    <strong>Подтверждением вашей доброй воли будет взнос по сердцу на карту Сбера:</strong><br>
+                    <strong>Подтверждением вашей доброй воли является взнос по сердцу на карту:</strong><br>
                 </p>
                 
                 <div class="bank-card">2202 2084 1630 6752</div>
