--- a/index.html
+++ b/index.html
@@ -217,6 +217,20 @@
     </style>
 </head>
 <body>
+    <nav class="sidebar">
+        <div class="nav-buttons">
+            <button class="nav-btn" data-section="new-worldview">НОВОЕ ОБЪЯСНЕНИЕ МИРА</button>
+            <button class="nav-btn" data-section="practice">Практика</button>
+            <button class="nav-btn" data-section="learning">Обучение</button>
+            <button class="nav-btn" data-section="joint-actions">Совместные акции</button>
+            <button class="nav-btn" data-section="broadcasts">Трансляции</button>
+            <button class="nav-btn" data-section="video">Видеотека</button>
+            <button class="nav-btn" data-section="interesting-cases">Интересные случаи</button>
+            <button class="nav-btn" data-section="reviews">Отзывы</button>
+            <button class="nav-btn" data-section="contacts">Контакты</button>
+            <button class="nav-btn" data-section="cooperation">Сотрудничество</button>
+        </div>
+    </nav>
     <div class="floating-symbols" id="symbols"></div>
     
     <!-- Попап для платежной информации -->
