--- a/index.html
+++ b/index.html
@@ -217,21 +217,55 @@
     </style>
 </head>
 <body>
-    <nav class="sidebar">
-        <div class="nav-buttons">
-            <button class="nav-btn" data-section="new-worldview">НОВОЕ ОБЪЯСНЕНИЕ МИРА</button>
-            <button class="nav-btn" data-section="practice">Практика</button>
-            <button class="nav-btn" data-section="learning">Обучение</button>
-            <button class="nav-btn" data-section="joint-actions">Совместные акции</button>
-            <button class="nav-btn" data-section="broadcasts">Трансляции</button>
-            <button class="nav-btn" data-section="video">Видеотека</button>
-            <button class="nav-btn" data-section="interesting-cases">Интересные случаи</button>
-            <button class="nav-btn" data-section="reviews">Отзывы</button>
-            <button class="nav-btn" data-section="contacts">Контакты</button>
-            <button class="nav-btn" data-section="cooperation">Сотрудничество</button>
-        </div>
-    </nav>
-    <div class="floating-symbols" id="symbols"></div>
+<!-- Левая панель навигации -->
+<nav class="sidebar">
+    <div class="nav-header">
+        <div class="nav-title">НАВИГАЦИЯ</div>
+        <div class="nav-divider"></div>
+    </div>
+    <div class="nav-buttons">
+        <button class="nav-btn" data-section="new-worldview">
+            <span class="btn-text">НОВОЕ ОБЪЯСНЕНИЕ МИРА</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="practice">
+            <span class="btn-text">Практика</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="learning">
+            <span class="btn-text">Обучение</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="joint-actions">
+            <span class="btn-text">Совместные акции</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="broadcasts">
+            <span class="btn-text">Трансляции</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="video">
+            <span class="btn-text">Видеотека</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="interesting-cases">
+            <span class="btn-text">Интересные случаи из жизни</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="reviews">
+            <span class="btn-text">Отзывы</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="contacts">
+            <span class="btn-text">Контакты</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="cooperation">
+            <span class="btn-text">Сотрудничество</span>
+            <span class="btn-glow"></span>
+        </button>
+    </div>
+</nav>
     
     <!-- Попап для платежной информации -->
     <div class="popup-overlay" id="paymentPopup">
