--- a/index.html
+++ b/index.html
@@ -206,6 +206,6 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <script src="navigation.js"></script>
+    <!-- <script src="navigation.js"></script> -->
 </body>
 </html>
