--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="nav-buttons">
         <button class="nav-btn" data-section="new-worldview">
-            <span class="btn-text">НОВОЕ ОБЪЯСНЕНИЕ МИРА</span>
+            <span class="btn-text">НОВОЕ ОБЪЯСНЕНИЕ МИРА (мировоззренческая теория)</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="practice">
