--- a/index.html
+++ b/index.html
@@ -20,39 +20,39 @@
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="practice">
-            <span class="btn-text">Практика</span>
+            <span class="btn-text">Наши практики</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="learning">
-            <span class="btn-text">Обучение</span>
+            <span class="btn-text">Обучение, тренинги, интенсивы</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="joint-actions">
-            <span class="btn-text">Совместные акции</span>
+            <span class="btn-text">Разовые совместные акции</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="broadcasts">
-            <span class="btn-text">Трансляции</span>
+            <span class="btn-text">Онлайн-трансляции, Видеотека</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="video">
-            <span class="btn-text">Видеотека</span>
+            <span class="btn-text">Мои публикации</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="interesting-cases">
-            <span class="btn-text">Интересные случаи из жизни</span>
+            <span class="btn-text">Отрывки из ещё неизданных произведений</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="reviews">
-            <span class="btn-text">Отзывы</span>
+            <span class="btn-text">Интересные случаи из жизни</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="contacts">
-            <span class="btn-text">Контакты</span>
+            <span class="btn-text">Отзывы</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="cooperation">
-            <span class="btn-text">Сотрудничество</span>
+            <span class="btn-text">Контакты, сотрудничество</span>
             <span class="btn-glow"></span>
         </button>
     </div>
