--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="joint-actions">
-            <span class="btn-text">Разовые совместные акции</span>
+            <span class="btn-text">Посвящения, Разовые совместные акции</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="broadcasts">
