--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!-- Левая панель навигации -->
-<nav class="sidebar pattern-scroll">
+<nav class="sidebar minimal-scroll">
     <div class="nav-header">
         <div class="nav-title">НАВИГАЦИЯ</div>
         <div class="nav-divider"></div>
