--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 </head>
 <body>
 <!-- Левая панель навигации -->
+<!-- Левая панель навигации -->
 <nav class="sidebar minimal-scroll">
     <div class="nav-header">
         <div class="nav-title">НАВИГАЦИЯ</div>
         <div class="nav-divider"></div>
     </div>
     <div class="nav-buttons">
+        <!-- Добавленная кнопка Главная -->
+        <button class="nav-btn active" data-section="main" onclick="showMainContent()">
+            <span class="btn-text">Главная</span>
+            <span class="btn-glow"></span>
+        </button>
+        
         <button class="nav-btn" data-section="new-worldview">
             <span class="btn-text">НОВОЕ ОБЪЯСНЕНИЕ МИРА (мировоззренческая теория)</span>
             <span class="btn-glow"></span>
