--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="nav-buttons">
         <!-- Добавленная кнопка Главная -->
-        <button class="nav-btn active" data-section="main" onclick="showMainContent()">
+        <button class="nav-btn active" data-section="main">
             <span class="btn-text">Главная</span>
             <span class="btn-glow"></span>
         </button>
