--- a/index.html
+++ b/index.html
@@ -38,27 +38,27 @@
             <span class="btn-text">Посвящения, Разовые совместные акции</span>
             <span class="btn-glow"></span>
         </button>
-        <button class="nav-btn" data-section="broadcasts">
+        <button class="nav-btn" data-section="videos">
             <span class="btn-text">Онлайн-трансляции, Видеотека</span>
             <span class="btn-glow"></span>
         </button>
-        <button class="nav-btn" data-section="video">
+        <button class="nav-btn" data-section="publications">
             <span class="btn-text">Мои публикации</span>
             <span class="btn-glow"></span>
         </button>
-        <button class="nav-btn" data-section="interesting-cases">
+        <button class="nav-btn" data-section="unpublished">
             <span class="btn-text">Отрывки из ещё неизданных произведений</span>
             <span class="btn-glow"></span>
         </button>
-        <button class="nav-btn" data-section="reviews">
+        <button class="nav-btn" data-section="interesting-cases">
             <span class="btn-text">Интересные случаи из жизни</span>
             <span class="btn-glow"></span>
         </button>
-        <button class="nav-btn" data-section="contacts">
+        <button class="nav-btn" data-section="reviews">
             <span class="btn-text">Отзывы</span>
             <span class="btn-glow"></span>
         </button>
-        <button class="nav-btn" data-section="cooperation">
+        <button class="nav-btn" data-section="contacts">
             <span class="btn-text">Контакты, сотрудничество</span>
             <span class="btn-glow"></span>
         </button>
