--- a/404.html
+++ b/404.html
@@ -1,29 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <script>
-        const path = window.location.pathname.split('/').pop();
-        const routes = {
-            'new-worldview': 'pages/new-worldview.html',
-            'practice': 'pages/practice.html',
-            'learning': 'pages/learning.html',
-            'joint-actions': 'pages/joint-actions.html',
-            'videos': 'pages/videos.html',
-            'publications': 'pages/publications.html',
-            'unpublished': 'pages/unpublished.html',
-            'interesting-cases': 'pages/interesting-cases.html',
-            'reviews': 'pages/reviews.html',
-            'contacts': 'pages/contacts.html'
-        };
-
-        if (routes[path]) {
-            window.location.href = routes[path];
-        } else {
-            window.location.href = '/';
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Перенаправление</title>
+    <style>
+        body {
+            background: #0a0a0a;
+            color: #40E0D0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-    </script>
+        .loading {
+            text-align: center;
+        }
+        .spinner {
+            border: 3px solid #333;
+            border-top: 3px solid #40E0D0;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin: 0 auto 20px;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 <body>
-    <p>Перенаправление...</p>
+    <div class="loading">
+        <div class="spinner"></div>
+        <p>Перенаправление...</p>
+    </div>
+
+    <script>
+        // Роутинг для красивых URL
+        const path = window.location.pathname.split('/').pop();
+        const routes = {
+            'new-worldview': 'new-worldview.html',
+            'practice': 'practice.html',
+            'learning': 'learning.html',
+            'joint-actions': 'joint-actions.html',
+            'videos': 'videos.html',
+            'publications': 'publications.html',
+            'unpublished': 'unpublished.html',
+            'interesting-cases': 'interesting-cases.html',
+            'reviews': 'reviews.html',
+            'contacts': 'contacts.html'
+        };
+
+        // Немного задержки для красоты
+        setTimeout(() => {
+            if (routes[path]) {
+                window.location.href = routes[path];
+            } else {
+                window.location.href = '/';
+            }
+        }, 1000);
+    </script>
 </body>
 </html>
