--- a/404.html
+++ b/404.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Перенаправление</title>
+    <!-- Абсолютные пути к стилям -->
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/navigation.css">
     <style>
-        body {
+        .loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: #0a0a0a;
-            color: #40E0D0;
-            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
+            z-index: 9999;
         }
-        .loading {
+        .loading-content {
             text-align: center;
+            color: #40E0D0;
         }
         .spinner {
             border: 3px solid #333;
@@ -34,25 +40,27 @@
     </style>
 </head>
 <body>
-    <div class="loading">
-        <div class="spinner"></div>
-        <p>Перенаправление...</p>
+    <div class="loading-overlay">
+        <div class="loading-content">
+            <div class="spinner"></div>
+            <p>Перенаправление...</p>
+        </div>
     </div>
 
     <script>
         // Роутинг для красивых URL с папкой pages
         const path = window.location.pathname.split('/').pop();
         const routes = {
-            'new-worldview': 'pages/new-worldview.html',
-            'practice': 'pages/practice.html',
-            'learning': 'pages/learning.html',
-            'joint-actions': 'pages/joint-actions.html',
-            'videos': 'pages/videos.html',
-            'publications': 'pages/publications.html',
-            'unpublished': 'pages/unpublished.html',
-            'interesting-cases': 'pages/interesting-cases.html',
-            'reviews': 'pages/reviews.html',
-            'contacts': 'pages/contacts.html'
+            'new-worldview': '/pages/new-worldview.html',
+            'practice': '/pages/practice.html',
+            'learning': '/pages/learning.html',
+            'joint-actions': '/pages/joint-actions.html',
+            'videos': '/pages/videos.html',
+            'publications': '/pages/publications.html',
+            'unpublished': '/pages/unpublished.html',
+            'interesting-cases': '/pages/interesting-cases.html',
+            'reviews': '/pages/reviews.html',
+            'contacts': '/pages/contacts.html'
         };
 
         setTimeout(() => {
@@ -61,7 +69,7 @@
             } else {
                 window.location.href = '/';
             }
-        }, 1000);
+        }, 1500);
     </script>
 </body>
 </html>
