--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
             </p>
         </div>
     </div>
+    <div class="floating-symbols"></div>
     <script src="script.js"></script>
     <script src="navigation.js"></script>
 </body>
