--- a/new-worldview.html
+++ b/new-worldview.html
@@ -236,8 +236,8 @@
         <div class="final-line"></div>
     </div>
 </div>
-
-<script src="script.js"></script>
-<script src="navigation.js"></script>
+    <div class="floating-symbols"></div>
+    <script src="script.js"></script>
+    <script src="navigation.js"></script>
 </body>
 </html>
