--- a/videos.html
+++ b/videos.html
@@ -489,7 +489,7 @@
             <div class="video-item">
                 <div class="video-title">Плейлист практик</div>
                 <div class="video-wrapper">
-                    <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254724" allowfullscreen></iframe>
+                    <iframe src="https://vkvideo.ru/video_ext.php?oid=87855351&id=456254724&hd=2&hash=45662875e242384c" allowfullscreen></iframe>
                 </div>
                 <div class="video-counter">#41</div>
             </div>
