--- a/videos.html
+++ b/videos.html
@@ -166,7 +166,7 @@
         <div class="video-grid">
             <!-- Видео 1-60+ -->
             <div class="video-item">
-                <div class="video-title">Основы миропонимания</div>
+                <div class="video-title">Мы сообща возродили ныне НОВОЕ Древо Жизни!</div>
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254815" allowfullscreen></iframe>
                 </div>
