--- a/videos.html
+++ b/videos.html
@@ -233,7 +233,9 @@
             </div>
 
             <div class="video-item">
-                <div class="video-title">Практики очищения</div>
+                <div class="video-title" data-fulltitle="МОЖНО ИЗБЕЖАТЬ СМЕРТИ – НО НЕЛЬЗЯ ИЗБЕЖАТЬ ЛЮБВИ!">
+                    МОЖНО ИЗБЕЖАТЬ СМЕРТИ – НО НЕЛЬЗЯ ИЗБЕЖАТЬ ЛЮБВИ!
+                </div>
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254811" allowfullscreen></iframe>
                 </div>
@@ -241,8 +243,10 @@
             </div>
 
             <div class="video-item">
-                <div class="video-title">Энергетические потоки</div>
-                <div class="video-wrapper">
+                <div class="video-title" data-fulltitle="НОВАЯ ЭЛИТА Руси *Земли Света* не нуждается в признании со стороны быдломассы">
+                    НОВАЯ ЭЛИТА Руси *Земли Света* не нуждается в признании со стороны быдломассы
+                </div>
+                <div class="video-wrapper">>
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254810" allowfullscreen></iframe>
                 </div>
                 <div class="video-counter">#3</div>
