--- a/videos.html
+++ b/videos.html
@@ -70,17 +70,13 @@
             margin-bottom: 0.5rem;
             text-align: center;
             line-height: 1.2;
-            display: -webkit-box;
-            -webkit-line-clamp: 1;
-            -webkit-box-orient: vertical;
+            white-space: nowrap;
             overflow: hidden;
-            padding: 0.3rem;
-            flex-grow: 1;
+            text-overflow: ellipsis;
+            padding: 0.5rem 0.3rem;
             cursor: help;
             position: relative;
-            height: auto;
-            min-height: auto;
-            max-height: none;
+            width: 100%;
         }
         
         /* Всплывающая подсказка */
@@ -173,8 +169,6 @@
             
             .video-title {
                 font-size: 0.9rem;
-                min-height: auto;
-                max-height: none;
             }
         }
     </style>
