--- a/videos.html
+++ b/videos.html
@@ -36,10 +36,11 @@
             transition: all 0.3s ease;
             display: flex;
             flex-direction: column;
-            height: 320px; /* ФИКСИРОВАННАЯ высота блока */
+            height: 320px;
             box-sizing: border-box;
             width: 100%; 
             min-width: 0;
+            overflow: hidden;
         }
         
         .video-item:hover {
@@ -80,14 +81,12 @@
             position: relative;
             width: 100%;
             height: 3rem; 
-            display: flex;
-            align-items: center;
-            justify-content: center;
             margin-bottom: 0.5rem;
             box-sizing: border-box;
             flex-shrink: 0;
             min-width: 0;
             max-width: 100%; 
+            display: block;
         }
         
         /* Всплывающая подсказка */
@@ -302,7 +301,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254797" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#7</div>
             </div>
 
             <div class="video-item">
@@ -310,7 +308,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254796" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#8</div>
             </div>
 
             <div class="video-item">
@@ -318,7 +315,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254793" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#9</div>
             </div>
 
             <div class="video-item">
@@ -326,7 +322,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254791" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#10</div>
             </div>
 
             <div class="video-item">
@@ -334,7 +329,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254790" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#11</div>
             </div>
 
             <div class="video-item">
@@ -342,7 +336,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254788" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#12</div>
             </div>
 
             <div class="video-item">
@@ -350,7 +343,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254786" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#13</div>
             </div>
 
             <div class="video-item">
@@ -358,7 +350,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254784" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#14</div>
             </div>
 
             <div class="video-item">
@@ -366,7 +357,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254783" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#15</div>
             </div>
 
             <div class="video-item">
@@ -374,7 +364,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254778" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#16</div>
             </div>
 
             <div class="video-item">
@@ -382,7 +371,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=-227456729&id=456247047" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#17</div>
             </div>
 
             <div class="video-item">
@@ -390,7 +378,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254777" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#18</div>
             </div>
 
             <div class="video-item">
@@ -398,7 +385,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254775" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#19</div>
             </div>
 
             <div class="video-item">
@@ -406,7 +392,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254771" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#20</div>
             </div>
 
             <div class="video-item">
@@ -414,7 +399,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254774" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#21</div>
             </div>
 
             <div class="video-item">
@@ -422,7 +406,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254768" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#22</div>
             </div>
 
             <div class="video-item">
@@ -430,7 +413,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254767" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#23</div>
             </div>
 
             <div class="video-item">
@@ -438,7 +420,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254766" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#24</div>
             </div>
 
             <div class="video-item">
@@ -446,7 +427,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254763" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#25</div>
             </div>
 
             <div class="video-item">
@@ -454,7 +434,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254762" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#26</div>
             </div>
 
             <div class="video-item">
@@ -462,7 +441,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254761" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#27</div>
             </div>
 
             <div class="video-item">
@@ -470,7 +448,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254759" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#28</div>
             </div>
 
             <div class="video-item">
@@ -478,7 +455,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254752" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#29</div>
             </div>
 
             <div class="video-item">
@@ -486,7 +462,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254758" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#30</div>
             </div>
 
             <div class="video-item">
@@ -494,7 +469,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254757" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#31</div>
             </div>
 
             <div class="video-item">
@@ -502,7 +476,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=-205196208&id=456239693" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#32</div>
             </div>
 
             <div class="video-item">
@@ -510,7 +483,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254754" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#33</div>
             </div>
 
             <div class="video-item">
@@ -518,7 +490,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=-205196208&id=456239689" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#34</div>
             </div>
 
             <div class="video-item">
@@ -526,7 +497,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254731" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#35</div>
             </div>
 
             <div class="video-item">
@@ -534,7 +504,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254730" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#36</div>
             </div>
 
             <div class="video-item">
@@ -542,7 +511,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254728" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#37</div>
             </div>
 
             <div class="video-item">
@@ -550,7 +518,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254727" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#38</div>
             </div>
 
             <div class="video-item">
@@ -558,7 +525,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254726" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#39</div>
             </div>
 
             <div class="video-item">
@@ -566,7 +532,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254725" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#40</div>
             </div>
 
             <!-- Продолжение видео 41-60+ -->
@@ -575,7 +540,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vkvideo.ru/video_ext.php?oid=87855351&id=456254724&hd=2&hash=45662875e242384c" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#41</div>
             </div>
 
             <div class="video-item">
@@ -583,7 +547,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=-226745248&id=456239054" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#42</div>
             </div>
 
             <div class="video-item">
@@ -591,7 +554,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254723" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#43</div>
             </div>
 
             <div class="video-item">
@@ -599,7 +561,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254722" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#44</div>
             </div>
 
             <div class="video-item">
@@ -607,7 +568,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254721" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#45</div>
             </div>
 
             <div class="video-item">
@@ -615,7 +575,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254719" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#46</div>
             </div>
 
             <div class="video-item">
@@ -623,7 +582,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254718" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#47</div>
             </div>
 
             <div class="video-item">
@@ -631,7 +589,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254715" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#48</div>
             </div>
 
             <div class="video-item">
@@ -639,7 +596,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254714" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#49</div>
             </div>
 
             <div class="video-item">
@@ -647,7 +603,6 @@
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254713" allowfullscreen></iframe>
                 </div>
-                <div class="video-counter">#50</div>
             </div>
 
             <!-- Продолжение до 60+ -->
