--- a/videos.html
+++ b/videos.html
@@ -240,13 +240,13 @@
 
 <div class="videos-container">
     <div style="text-align: center; margin-bottom: 2rem;">
-        <h1 style="font-size: 2rem; color: #40E0D0; margin-bottom: 1rem;">ПОЛНАЯ ВИДЕОТЕКА</h1>
+        <h1 style="font-size: 2rem; color: #40E0D0; margin-bottom: 1rem;">ВИДЕОТЕКА</h1>
         <p style="font-size: 1.2rem; color: #40E0D0;">Вся коллекция видео-материалов и онлайн-трансляций</p>
     </div>
     
     <div class="video-grid">
             <!-- Видео 1-60+ -->
-            <div class="video-item" data-fulltitle="Мы сообща возродили ныне НОВОЕ Древо Жизни!">
+            <div class="video-item" title="Мы сообща возродили ныне НОВОЕ Древо Жизни!">
                 <div class="video-title">
                     Мы сообща возродили ныне НОВОЕ Древо Жизни!
                 </div>
