--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Видео</title>
+    <title>Видеотека</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navigation.css">
     <style>
@@ -79,7 +79,6 @@
             height: 0;
             overflow: hidden;
             border-radius: 6px;
-            margin-bottom: 0.8rem;
             flex-shrink: 0;
         }
         
@@ -100,7 +99,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            padding: 0.5rem 0.3rem;
+            padding: 0.8rem 0.3rem;
             width: 100%;
             height: auto; 
             min-height: 2.2rem; 
@@ -151,7 +150,7 @@
             .video-title {
                 font-size: 0.9rem;
                 height: 2rem;
-                padding: 0.3rem 0.2rem;
+                padding: 0.6rem 0.2rem;
             }
         }
     </style>
