--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Видеотека</title>
+    <title>Видео</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navigation.css">
     <style>
@@ -80,6 +80,7 @@
             overflow: hidden;
             border-radius: 6px;
             flex-shrink: 0;
+            margin-bottom: 0.8rem;
         }
         
         .video-wrapper iframe {
@@ -146,11 +147,15 @@
                 padding: 0.6rem;
                 height: 200px;
             }
+
+            .video-wrapper {
+                margin-bottom: 0.6rem;
+            }
             
             .video-title {
                 font-size: 0.9rem;
                 height: 2rem;
-                padding: 0.6rem 0.2rem;
+                padding: 0.3rem 0.2rem;
             }
         }
     </style>
