--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Видеотека</title>
+    <title>Видео</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navigation.css">
     <style>
@@ -107,11 +107,9 @@
             flex-shrink: 0;
             min-width: 0;
             max-width: 100%; 
-            display: flex;
-            align-items: center;
-            justify-content: center;
             margin: 0;
             margin-top: auto;
+            display: block;
         }
         
         @media (min-width: 1400px) {
