--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Видеотека</title>
+    <title>Видеотека1</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navigation.css">
     <style>
@@ -80,6 +80,7 @@
             overflow: hidden;
             border-radius: 6px;
             flex-shrink: 0;
+            margin-bottom: 0.8rem !important;
         }
         
         .video-wrapper iframe {
