--- a/videos.html
+++ b/videos.html
@@ -54,8 +54,15 @@
             background: rgba(60, 10, 40, 0.5);
             border: 1px solid rgba(64, 224, 208, 0.3);
             border-radius: 8px;
-            padding: 0.8rem;
+            padding: 1rem;
             transition: all 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            height: 320px;
+            box-sizing: border-box;
+            width: 100%; 
+            min-width: 0;
+            overflow: hidden; /* ДОБАВЛЯЕМ */
         }
         
         .video-item:hover {
@@ -85,9 +92,23 @@
         .video-title {
             color: #40E0D0;
             font-size: 0.95rem;
-            margin-bottom: 0.3rem;
             text-align: center;
-            line-height: 1.3;
+            line-height: 1.2;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            padding: 0.8rem 0.3rem;
+            cursor: help;
+            position: relative;
+            width: 100%;
+            height: 3rem; 
+            margin-bottom: 0.5rem;
+            box-sizing: border-box;
+            flex-shrink: 0;
+            min-width: 0;
+            max-width: 100%; 
+            /* УБИРАЕМ display: flex и выравнивание */
+            display: block;
         }
         
         @media (min-width: 1400px) {
