--- a/videos.html
+++ b/videos.html
@@ -102,7 +102,7 @@
             position: relative;
             width: 100%;
             height: 3rem; 
-            margin-bottom: 0.5rem;
+            /*margin-bottom: 0.5rem; */
             box-sizing: border-box;
             flex-shrink: 0;
             min-width: 0;
