--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Видео</title>
+    <title>Видеоа</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navigation.css">
     <style>
@@ -54,11 +54,11 @@
             background: rgba(60, 10, 40, 0.5);
             border: 1px solid rgba(64, 224, 208, 0.3);
             border-radius: 8px;
-            padding: 0.5rem;
+            padding: 1rem;
             transition: all 0.3s ease;
             display: flex;
             flex-direction: column;
-            height: 320px;
+            height: 300px;
             box-sizing: border-box;
             width: 100%; 
             min-width: 0;
