--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Видеоа</title>
+    <title>Видеотека</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navigation.css">
     <style>
@@ -58,7 +58,7 @@
             transition: all 0.3s ease;
             display: flex;
             flex-direction: column;
-            height: 280px;
+            height: 260px;
             box-sizing: border-box;
             width: 100%; 
             min-width: 0;
