--- a/videos.html
+++ b/videos.html
@@ -58,7 +58,7 @@
             transition: all 0.3s ease;
             display: flex;
             flex-direction: column;
-            height: 280px;
+            height: 260px;
             box-sizing: border-box;
             width: 100%; 
             min-width: 0;
@@ -77,7 +77,7 @@
             height: 0;
             overflow: hidden;
             border-radius: 6px;
-            margin-bottom: 0.1rem;
+            /* margin-bottom: 0.1rem; */
         }
         
         .video-wrapper iframe {
