--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Видеотека</title>
+    <title>Видеоте</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navigation.css">
     <style>
@@ -58,7 +58,7 @@
             transition: all 0.3s ease;
             display: flex;
             flex-direction: column;
-            height: 280px;
+            height: 260px;
             box-sizing: border-box;
             width: 100%; 
             min-width: 0;
@@ -93,15 +93,15 @@
             color: #40E0D0;
             font-size: 0.95rem;
             text-align: center;
-            line-height: 1.2;
+            line-height: 1;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            padding: 0.3rem 0.3rem;
+            padding: 0.2rem 0.3rem;
             cursor: help;
             position: relative;
             width: 100%;
-            height: 2.5rem; 
+            height: 1.8rem; 
             /*margin-bottom: 0.5rem; */
             box-sizing: border-box;
             flex-shrink: 0;
