--- a/videos.html
+++ b/videos.html
@@ -97,7 +97,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            padding: 0.2rem 0.3rem;
+            padding: 0rem 0.3rem 0.3rem;
             cursor: help;
             position: relative;
             width: 100%;
