--- a/videos.html
+++ b/videos.html
@@ -231,36 +231,36 @@
                 </div>
             </div>
 
-            <div class="video-item" title="Медитации и концентрация">
-                <div class="video-title">Медитации и концентрация</div>
+            <div class="video-item" title="Непроницаемо чёрный покров НЕПОДСУДНОСТИ: всё Мне служит и всё Мне принадлежит">
+                <div class="video-title">Непроницаемо чёрный покров НЕПОДСУДНОСТИ: всё Мне служит и всё Мне принадлежит</div>
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254809" allowfullscreen></iframe>
                 </div>
             </div>
 
-            <div class="video-item" title="Дыхательные практики">
-                <div class="video-title">Дыхательные практики</div>
+            <div class="video-item" title="ЦАРСТВО БЕЗСМЕРТНОГО ТЕЛА рождается в любви двоих">
+                <div class="video-title">ЦАРСТВО БЕЗСМЕРТНОГО ТЕЛА рождается в любви двоих</div>
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254806" allowfullscreen></iframe>
                 </div>
             </div>
 
-            <div class="video-item" title="Работа с энергией">
-                <div class="video-title">Работа с энергией</div>
+            <div class="video-item" title="Купальский Эфир. В поисках АЛеНького Цветочка">
+                <div class="video-title">Купальский Эфир. В поисках АЛеНького Цветочка</div>
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254798" allowfullscreen></iframe>
                 </div>
             </div>
 
-            <div class="video-item" title="Техники защиты">
-                <div class="video-title">Техники защиты</div>
+            <div class="video-item" title="НОВЫЙ ЧЕЧЕНСКИЙ ЭГРЕГОР. Почему теперь г. Грозный становится Центром мира">
+                <div class="video-title">НОВЫЙ ЧЕЧЕНСКИЙ ЭГРЕГОР. Почему теперь г. Грозный становится Центром мира</div>
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254797" allowfullscreen></iframe>
                 </div>
             </div>
 
-            <div class="video-item" title="Развитие интуиции">
-                <div class="video-title">Развитие интуиции</div>
+            <div class="video-item" title='"Всё Мне служит и всё Мне принадлежит". Покров НЕПОДСУДНОСТИ'>
+                <div class="video-title">"Всё Мне служит и всё Мне принадлежит". Покров НЕПОДСУДНОСТИ</div>
                 <div class="video-wrapper">
                     <iframe src="https://vk.com/video_ext.php?oid=87855351&id=456254796" allowfullscreen></iframe>
                 </div>
