--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
             <p class="question">
                 !!! ТОЛЬКО ВМЕСТЕ МЫ СИЛА !!!
             </p>
+
+            <div class="final-line"></div>
+            
         </div>
     </div>
     <div class="floating-symbols"></div>
