--- a/videos.html
+++ b/videos.html
@@ -202,6 +202,8 @@
         <h1 style="font-size: 2rem; color: #40E0D0; margin-bottom: 1rem;">ВИДЕОТЕКА</h1>
         <p style="font-size: 1.2rem; color: #40E0D0;">Вся коллекция видео-материалов и онлайн-трансляций</p>
     </div>
+
+    <div class="final-line"></div>
     
     <div class="video-grid">
             <div class="video-item" title="Мы сообща возродили ныне НОВОЕ Древо Жизни!">
