--- a/videos.html
+++ b/videos.html
@@ -564,6 +564,7 @@
         </div>
     </div>
 </div>
+<p style="font-size: 1.2rem; color: #40E0D0;">Вся коллекция видео-материалов и онлайн-трансляций</p>
 <div class="final-line"></div>
 <div class="floating-symbols"></div>
 <script src="script.js"></script>
