--- a/publications.html
+++ b/publications.html
@@ -123,6 +123,8 @@
                 <div class="publication-description">Архив крымской газеты "Тайная Доктрина" за 2004-2012 гг.</div>
             </li>
         </ul>
+
+        <div class="final-line"></div>
         
     </div>
 </div>
