--- a/publications.html
+++ b/publications.html
@@ -110,7 +110,7 @@
             </li>
             
             <li>
-                <a href="http://www.inisvirgin.narod.ru/" class="publication-link" target="_blank">
+                <a href="http://inisvirgin.narod.ru/" class="publication-link" target="_blank">
                     http://www.inisvirgin.narod.ru/
                 </a>
                 <div class="publication-description">Сайт InisVirgin</div>
