--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <div class="nav-divider"></div>
     </div>
     <div class="nav-buttons">
-        <!-- Добавленная кнопка Главная -->
         <button class="nav-btn active" data-section="main">
             <span class="btn-text">Главная</span>
             <span class="btn-glow"></span>
@@ -30,7 +29,7 @@
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="learning">
-            <span class="btn-text">Обучение, тренинги, интенсивы</span>
+            <span class="btn-text">ОБУЧЕНИЕ, тренинги, интенсивы, семинары</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="joint-actions">
@@ -59,6 +58,10 @@
         </button>
         <button class="nav-btn" data-section="contacts">
             <span class="btn-text">Контакты, сотрудничество</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="exclusive">
+            <span class="btn-text">Эксклюзивные материалы</span>
             <span class="btn-glow"></span>
         </button>
     </div>
