--- a/publications.html
+++ b/publications.html
@@ -48,7 +48,7 @@
         <div class="nav-divider"></div>
     </div>
     <div class="nav-buttons">
-        <button class="nav-btn" data-section="main">
+        <button class="nav-btn active" data-section="main">
             <span class="btn-text">Главная</span>
             <span class="btn-glow"></span>
         </button>
@@ -62,7 +62,7 @@
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="learning">
-            <span class="btn-text">Обучение, тренинги, интенсивы</span>
+            <span class="btn-text">ОБУЧЕНИЕ, тренинги, интенсивы, семинары</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="joint-actions">
@@ -73,7 +73,7 @@
             <span class="btn-text">Онлайн-трансляции, Видеотека</span>
             <span class="btn-glow"></span>
         </button>
-        <button class="nav-btn active" data-section="publications">
+        <button class="nav-btn" data-section="publications">
             <span class="btn-text">Мои публикации</span>
             <span class="btn-glow"></span>
         </button>
@@ -91,6 +91,10 @@
         </button>
         <button class="nav-btn" data-section="contacts">
             <span class="btn-text">Контакты, сотрудничество</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="exclusive">
+            <span class="btn-text">Эксклюзивные материалы</span>
             <span class="btn-glow"></span>
         </button>
     </div>
