--- a/videos.html
+++ b/videos.html
@@ -149,13 +149,13 @@
         <div class="nav-divider"></div>
     </div>
     <div class="nav-buttons">
-        <button class="nav-btn" data-section="main">
+        <button class="nav-btn active" data-section="main">
             <span class="btn-text">Главная</span>
             <span class="btn-glow"></span>
         </button>
         
         <button class="nav-btn" data-section="new-worldview">
-            <span class="btn-text">НОВОЕ ОБЪЯСНЕНИЕ МИРА</span>
+            <span class="btn-text">НОВОЕ ОБЪЯСНЕНИЕ МИРА (мировоззренческая теория)</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="practice">
@@ -163,14 +163,14 @@
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="learning">
-            <span class="btn-text">Обучение, тренинги, интенсивы</span>
+            <span class="btn-text">ОБУЧЕНИЕ, тренинги, интенсивы, семинары</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="joint-actions">
             <span class="btn-text">Посвящения, Разовые совместные акции</span>
             <span class="btn-glow"></span>
         </button>
-        <button class="nav-btn active" data-section="videos">
+        <button class="nav-btn" data-section="videos">
             <span class="btn-text">Онлайн-трансляции, Видеотека</span>
             <span class="btn-glow"></span>
         </button>
@@ -192,6 +192,10 @@
         </button>
         <button class="nav-btn" data-section="contacts">
             <span class="btn-text">Контакты, сотрудничество</span>
+            <span class="btn-glow"></span>
+        </button>
+        <button class="nav-btn" data-section="exclusive">
+            <span class="btn-text">Эксклюзивные материалы</span>
             <span class="btn-glow"></span>
         </button>
     </div>
