--- a/contacts.html
+++ b/contacts.html
@@ -29,7 +29,7 @@
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="learning">
-            <span class="btn-text">Обучение, тренинги, интенсивы</span>
+            <span class="btn-text">ОБУЧЕНИЕ, тренинги, интенсивы, семинары</span>
             <span class="btn-glow"></span>
         </button>
         <button class="nav-btn" data-section="joint-actions">
@@ -60,9 +60,12 @@
             <span class="btn-text">Контакты, сотрудничество</span>
             <span class="btn-glow"></span>
         </button>
+        <button class="nav-btn" data-section="exclusive">
+            <span class="btn-text">Эксклюзивные материалы</span>
+            <span class="btn-glow"></span>
+        </button>
     </div>
 </nav>
-
 <!-- Основной контент -->
 <div class="container">
     <div class="section">
