--- a/contacts.html
+++ b/contacts.html
@@ -46,9 +46,8 @@
             text-shadow: 0 0 10px rgba(64, 224, 208, 0.5);
         }
         
-        /* Убираем обводку у Telegram ссылок */
         .telegram-link { 
-            border-left: none; 
+            border-left: 2px solid #0088cc;
         }
         
         .vk-link { 
