--- a/contacts.html
+++ b/contacts.html
@@ -157,10 +157,10 @@
                 <div class="contact-platform">Телеграм</div>
                 <div class="contact-links">
                     <a href="https://t.me/isceleniepreobrazhenievoznesenie" class="contact-link" target="_blank">
-                        Исцеление • Преображение • Вознесение
+                        Канал "Исцеление • Преображение • Вознесение"
                     </a>
                     <a href="https://t.me/temarunda_akshayna" class="contact-link" target="_blank">
-                        ТемаРунда Акшайна
+                        Чат канала "Temarunda Akshayna"
                     </a>
                     <a href="https://t.me/Kyaabahan" class="contact-link" target="_blank">
                         @Kyaabahan
