--- a/contacts.html
+++ b/contacts.html
@@ -174,7 +174,7 @@
                 <div class="contact-platform">ВКонтакте</div>
                 <div class="contact-links">
                     <a href="https://vk.com/yaznayukaknado" class="contact-link" target="_blank">
-                        Я знаю, как надо
+                        Ольга Афанасьева
                     </a>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                 <div class="contact-platform">YouTube</div>
                 <div class="contact-links">
                     <a href="https://www.youtube.com/@yaznayukaknado" class="contact-link" target="_blank">
-                        @yaznayukaknado
+                        Я ЗНАЮ, КАК НАДО!
                     </a>
                 </div>
             </div>
