--- a/contacts.html
+++ b/contacts.html
@@ -48,6 +48,13 @@
             display: block;
             opacity: 0.8;
             transition: all 0.3s ease;
+            object-fit: contain;
+        }
+        
+        /* Специальный стиль для YouTube иконки */
+        .youtube-card .contact-icon {
+            width: 80px; /* шире чем высота */
+            height: 56px; /* ниже чем ширина */
         }
         
         .contact-card:hover .contact-icon {
