--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 Необходимо собрать как можно больше народа для совместного Волеизъявления в Ночь Самайна. 
             </p>
                 
-            <p class="text highlight" style="text-align: center; font-size: 1.1em; margin: 1.5rem 0;">
+            <p class="question">
                 Это уникальный шанс отправить за Завесу всё, что вредит ЖИВЫМ!
             </p>
                 
