--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span class="btn-text">Главная</span>
             <span class="btn-glow"></span>
         </button>
-        <button class="nav-btn active" data-section="credits">
+        <button class="nav-btn active" data-section="aboutcredits">
             <span class="btn-text">КАК ВАШИХ КРЕДИТОРОВ ПРЕВРАТИТЬ В ВАШИХ ДОЛЖНИКОВ</span>
             <span class="btn-glow"></span>
         </button>
