--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,10 @@
             <span class="btn-text">Главная</span>
             <span class="btn-glow"></span>
         </button>
-        
+        <button class="nav-btn active" data-section="aboutcredits">
+            <span class="btn-text">КАК ВАШИХ КРЕДИТОРОВ ПРЕВРАТИТЬ В ВАШИХ ДОЛЖНИКОВ</span>
+            <span class="btn-glow"></span>
+        </button>
         <button class="nav-btn" data-section="new-worldview">
             <span class="btn-text">НОВОЕ ОБЪЯСНЕНИЕ МИРА (мировоззренческая теория)</span>
             <span class="btn-glow"></span>
