--- a/videos.html
+++ b/videos.html
@@ -191,7 +191,7 @@
             <span class="btn-text">Главная</span>
             <span class="btn-glow"></span>
         </button>
-        <button class="nav-btn active" data-section="aboutcredits">
+        <button class="nav-btn active" data-section="about-credits">
             <span class="btn-text">КАК ВАШИХ КРЕДИТОРОВ ПРЕВРАТИТЬ В ВАШИХ ДОЛЖНИКОВ</span>
             <span class="btn-glow"></span>
         </button>
