--- a/about-credits.html
+++ b/about-credits.html
@@ -114,7 +114,7 @@
                 <h3>5. Вопрос о происхождении денег</h3>
                 <p>А были ли деньги у так называемого "заимодавца"? Приведите мне доказательства, что человек, который занял мне денег (кстати, кто этот человек? он существует?), действительно ими обладал. Приведите мне отчёт об источниках его дохода. Не являются ли они противозаконными - или, тем паче, без-человечными?</p>
                 <p>У меня нет и не может быть обязательств перед тем, кто сам нарушает все принципы и законы человеческой жизни - перед бесом, нелюдем, демоном.</p>
-                <p>(т.е. он, напр., внезапно заболеет раком и умрёт рачьше времени, оставив своих детей сиротами, или его переедет машина и он останется инвалидом, прикованным к креслу.</p>
+                <p>(т.е. он, напр., внезапно заболеет раком и умрёт раньше времени, оставив своих детей сиротами, или его переедет машина и он останется инвалидом, прикованным к креслу.</p>
                 <p>Будучи Человеком - воплощённым Творцом в Творении - я обладаю силой и властью приговорить его к этой участи за его преступления против человечности, за утрату им человеческого естества, при видимой двуногости, т.е. за введение в заблуждение).</p>
             </div>
 
