--- a/about-credits.html
+++ b/about-credits.html
@@ -74,7 +74,7 @@
 <div class="popup-overlay" id="paymentPopup">
     <div class="popup-content">
         <button class="close-popup" onclick="closePopup()">×</button>
-        <h2 style="margin-bottom: 1.5rem; color: #40E0D0;">ВЗНОС ПО СЕРДЦУ</h2>
+        <h2 style="margin-bottom: 1.5rem; color: #40E0D0;"></h2>
         
         <div class="payment-details">
             <p style="margin-bottom: 1rem;">
