--- a/about-credits.html
+++ b/about-credits.html
@@ -74,11 +74,10 @@
 <div class="popup-overlay" id="paymentPopup">
     <div class="popup-content">
         <button class="close-popup" onclick="closePopup()">×</button>
-        <h2 style="margin-bottom: 1.5rem; color: #40E0D0;"></h2>
+        <h2 style="margin-bottom: 1.5rem; color: #40E0D0;">Искренность и серьёзность ваших намерений разобраться с этим вопросом подтверждается взносом в таком размере, насколько вы цените его окончательное решение в вашу пользу.</h2>
         
         <div class="payment-details">
             <p style="margin-bottom: 1rem;">
-                <strong>Искренность и серьёзность ваших намерений разобраться с этим вопросом подтверждается взносом в таком размере, насколько вы цените его окончательное решение в вашу пользу.</strong><br>
             </p>
             
             <div class="bank-card">2202 2084 1630 6752</div>
@@ -108,7 +107,7 @@
         </p>
 
         <p style="margin-top: 1.5rem; font-style: italic; color: #4169E1;">
-            А кто готов и дальше кормить собой паразитов - идите и продолжайте! кормите их, которыми кормимся МЫ...
+            <strong>А кто готов и дальше кормить собой паразитов - идите и продолжайте! кормите их, которыми кормимся МЫ...</strong>
         </p>
     </div>
 </div>
