--- a/about-credits.html
+++ b/about-credits.html
@@ -72,7 +72,7 @@
 
 <!-- Попап для платежной информации -->
 <div class="popup-overlay" id="paymentPopup">
-    <div class="popup-content">
+    <div class="popup-content" style="max-width: 600px;">
         <button class="close-popup" onclick="closePopup()">×</button>
         <h2 style="margin-bottom: 1.5rem; color: #40E0D0;">Искренность и серьёзность ваших намерений разобраться с этим вопросом подтверждается взносом в таком размере, насколько вы цените его окончательное решение в вашу пользу.</h2>
         
@@ -246,8 +246,6 @@
         <button class="join-button" onclick="showPopup()">
             ВСТУПИТЬ В ЗАКРЫТУЮ ГРУППУ
         </button>
-
-        <div class="final-line"></div>
 
         <p class="text">
             Поскольку НИКТО ИНОЙ, КАК ТОЛЬКО САМ ЧЕЛОВЕК является единственно неоспоримым ЗаконоДателем в своей ЖизнеСфере и её чувствительной окрестности, то не следует подчиняться чужим законам.
